--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,15 @@
     <string name="txtTab3">Tab3</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="txtAccountCreation">Création de compte</string>
+    <string name="txtQrCode">QRCode</string>
+    <string name="txtFillOutTheFormManually">Remplir le formulaire manuellement</string>
+    <string name="editTextName">Nom</string>
+    <string name="editTextEmail">Email</string>
+    <string name="editTextFirstName">Prénom</string>
+    <string name="editTextAddress">Adresse</string>
+    <string name="editTextPostalCode">Code Postal</string>
+    <string name="editTextCity">Ville</string>
+    <string name="editTextFidelityCard">Carte de fidélité</string>
+    <string name="buttonTextCreate">Créer</string>
 </resources>
