--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,10 +11,9 @@
     <string name="txtAdress">Adress</string>
     <string name="txtPassword">Password</string>
     <string name="txtNom">Nom</string>
-    <string name="txtStudents">Students</string>
-    <string name="txtStudentsWs">Students WS</string>
+    <string name="txtStudents">Qr Code</string>
     <string name="txtCreate">Création de compte</string>
-    <string name="txtTabbar">Tabbar</string>
+    <string name="txtTabbar">Informations</string>
     <string name="txtTab1">Tab1</string>
     <string name="txtTab2">Tab2</string>
     <string name="txtTab3">Tab3</string>
